fixed spinner overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -528,8 +528,8 @@ img.logo-image {
     
     .spinner {
           margin: 100px auto;
-          width: 32px;
-          height: 32px;
+          width: 100px;
+          height: 100px;
           position: relative;
         }
 
@@ -575,4 +575,7 @@ img.logo-image {
             transform: rotate(-360deg);
             -webkit-transform: rotate(-360deg);
           }
+        }
+        .locations-index-el {
+          overflow: hidden;
         }
